--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">dimo</string>
     <string name="appCenterCrashes_whenToSendCrashes" moduleConfig="true" translatable="false">DO_NOT_ASK_JAVASCRIPT</string>
     <string name="appCenterAnalytics_whenToEnableAnalytics" moduleConfig="true" translatable="false">ALWAYS_SEND</string>
+    <!-- Staging -->
+    <string moduleConfig="true" name="CodePushDeploymentKey">QXut0JQ8ISwBEkXORBq4S_jDt_RrYTk1FERlr</string>
+    <!-- Production -->
+    <!-- <string moduleConfig="true" name="CodePushDeploymentKey">IV66NFyccATuTFwq-eON7TvqeDHyguHN3eKKH</string> -->
 </resources>
